sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:7: error: '=>' expected but ',' found.
      case d1, d2 => if (d1<d2) {
             ^